--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "heroku-postbuild": "npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.16.3",
     "vue": "^2.5.2"
   },
